--- a/public/css/stylefooter.css
+++ b/public/css/stylefooter.css
@@ -1,14 +1,14 @@
 
 .fat1
 {
-   height: 25vh;
+   height: auto;
     font-family: Apple Chancery, cursive;
     }
 .fat2
 {
     
     
-    height: 25vh;
+    height: auto;
     font-family: Apple Chancery, cursive;
     text-align: center;    
 }
@@ -16,7 +16,7 @@
 {
     
     
-    height: 25vh;
+    height: auto;
     font-family: Apple Chancery, cursive;
     text-align: center;    
 }
@@ -83,7 +83,23 @@ a.bouton_inst:hover {
     height:90px;
     
 }
-.test{
-    height: 16vh;
-    
+@media(max-width: 1150px)
+{
+    .fat3{
+        display: none;
+    }
+
+    .papt{
+  width: 100%;
+    }
+}
+@media(max-width: 1000px)
+{
+    .fat2{
+        display: none;
+    }
+
+    .papt{
+  width: 100%;
+    }
 }
